--- a/index.html
+++ b/index.html
@@ -4,33 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!-- Links the external CSS stylesheet -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Sets the title displayed on the browser tab -->
     <title>Pig Game</title>
   </head>
+
   <body>
     <main>
+      <!-- Defines the section for Player 1, marked as active by default -->
       <section class="player player--0 player--active">
+        <!-- Displays Player 1's name -->
         <h2 class="name" id="name--0">Player 1</h2>
+        <!-- Displays Player 1's total score -->
         <p class="score" id="score--0">43</p>
         <div class="current">
+          <!-- Label for the current score -->
           <p class="current-label">Current</p>
           <p class="current-score" id="current--0">0</p>
         </div>
+
+        <!-- Defines the section for Player 2 -->
       </section>
       <section class="player player--1">
+        <!-- Displays Player 2's name -->
         <h2 class="name" id="name--1">Player 2</h2>
+        <!-- Displays Player 2's total score -->
         <p class="score" id="score--1">24</p>
         <div class="current">
+          <!-- Label for the current score -->
           <p class="current-label">Current</p>
           <p class="current-score" id="current--1">0</p>
         </div>
       </section>
 
       <img src="/img/dice-5.png" alt="Playing dice" class="dice" />
+      <!-- Button to start a new game -->
       <button class="btn btn--new">🔄 New game</button>
+      <!-- Button to roll the dice -->
       <button class="btn btn--roll">🎲 Roll dice</button>
+      <!-- Button to hold the current score -->
       <button class="btn btn--hold">📥 Hold</button>
     </main>
+
+    <!-- Links the external JavaScript file -->
     <script src="script.js"></script>
   </body>
 </html>
